docs(neo4j): add NEO4J_SERVER_TUNING (memory/JVM/Vector API) + cross-refs (#576)
No doc described the Neo4j server-config surface — memory/heap, query cache,
planner, and the newly-added Vector API JVM flag (#575). Add a patterns doc
covering all NEO4J_* server settings, why the Java Vector API is enabled for
SKUEL's 5 vector indexes, the additive-safety reasoning, and a runtime
verification recipe.

- new: docs/patterns/NEO4J_SERVER_TUNING.md
- CLAUDE.md § Neo4j Infrastructure: server-tuning note + See-pointer
- docs/INDEX.md: list the new patterns doc
- neo4j-cypher-patterns skill: cross-ref + fix two stale facts on the vector
  index row (5 indexes not 2; OpenAI text-embedding-3-small not BGE per ADR-068)

Co-authored-by: Claude Opus 4.8 (1M context) <noreply@anthropic.com>